# sarawin

./: BUILD_WINDOWS.md  CMakeLists.txt  README.md  build.sh  package-windows.sh
.github/workflows/: windows-build.yml
resources/: download-icons.sh  saralibre.qrc
resources/sql/: schema.sql
resources/style/: dark.qss  light.qss
src/: main.cpp
src/audio/: audio_engine.cpp  audio_engine.h  audio_pipeline.cpp  audio_pipeline.h  crossfader.cpp  crossfader.h  recording_manager.cpp  recording_manager.h
src/core/: event_dispatcher.cpp  event_dispatcher.h  pisador_manager.cpp  pisador_manager.h  schedule_engine.cpp  schedule_engine.h  time_announcer.cpp  time_announcer.h  track_selector.cpp  track_selector.h  types.h
src/data/: audit_manager.cpp  audit_manager.h  backup_manager.cpp  backup_manager.h  config_manager.cpp  config_manager.h  database.cpp  database.h  event_repository.cpp  event_repository.h  instant_play_repo.cpp  instant_play_repo.h  schedule_repository.cpp  schedule_repository.h  state_manager.cpp  state_manager.h  stream_preset_repo.cpp  stream_preset_repo.h  user_manager.cpp  user_manager.h
src/ui/: audit_dashboard.cpp  audit_dashboard.h  eq_compressor_dialog.cpp  eq_compressor_dialog.h  event_editor.cpp  event_editor.h  event_summary.cpp  event_summary.h  events_column.cpp  events_column.h  header_widget.cpp  header_widget.h  inverse_assign.cpp  inverse_assign.h  list_manager.cpp  list_manager.h  live_assist_column.cpp  live_assist_column.h  login_dialog.cpp  login_dialog.h  main_window.cpp  main_window.h  metatag_editor.cpp  metatag_editor.h  schedule_column.cpp  schedule_column.h  schedule_editor.cpp  schedule_editor.h  schedule_manager.cpp  schedule_manager.h  settings_dialog.cpp  settings_dialog.h  vumeter_widget.cpp  vumeter_widget.h  weekly_grid.cpp  weekly_grid.h
src/util/: codec_checker.cpp  codec_checker.h  file_scanner.cpp  file_scanner.h  logger.cpp  logger.h  metadata_reader.cpp  metadata_reader.h  qt_connect_helpers.h
tests/: test_audio.cpp  test_config.cpp  test_database.cpp  test_file_scanner.cpp
translations/: README.md  saralibre_es.ts
